--- a/auth-app/package.json
+++ b/auth-app/package.json
@@ -15,10 +15,11 @@
     "expo": "~47.0.12",
     "expo-constants": "~14.0.2",
     "expo-status-bar": "~1.4.2",
-    "firebase": "^9.17.0",
-    "react": "18.1.0",
+    "firebase": "^9.17.1",
+    "react": "17.0.2",
     "react-native": "0.70.5",
-    "react-native-elements": "^3.4.3"
+    "react-native-elements": "^3.4.3",
+    "react-native-web": "~0.18.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
