--- a/my-app/package.json
+++ b/my-app/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/stack": "^6.3.12",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.7",
     "dotenv": "^16.0.3",
     "expo": "~47.0.12",
     "expo-constants": "~14.0.2",
