--- a/QR scanner/QR-scanner-app/package.json
+++ b/QR scanner/QR-scanner-app/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "expo": "~48.0.15",
     "expo-barcode-scanner": "~12.3.2",
     "expo-status-bar": "~1.4.4",
