--- a/authentication template/client/package.json
+++ b/authentication template/client/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-navigation/drawer": "^6.6.3",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
@@ -20,6 +21,7 @@
     "formik": "^2.4.4",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-expo-localstorage": "^1.0.3",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-pager-view": "6.2.0",
     "react-native-reanimated": "~3.3.0",
