ts warning fixed

--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -9,5 +9,9 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "types": ["node"]
+  },
+  "ts-node": {
+    "esm": true,
+    "experimentalSpecifierResolution": "node"
   }
 }
