--- a/api/package.json
+++ b/api/package.json
@@ -16,12 +16,16 @@
     "@arcjet/inspect": "^1.0.0-beta.8",
     "@arcjet/node": "^1.0.0-beta.8",
     "@clerk/express": "^1.7.0",
+    "cloudinary": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "mongoose": "^8.16.0"
+    "express-async-handler": "^1.2.0",
+    "mongoose": "^8.16.0",
+    "multer": "^2.0.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/node": "^24.3.0",
     "nodemon": "^3.1.10",
